[package]
name = "scrut"
version = "0.1.0"
edition = "2021"
autobins = false
description = "A simple and powerful test framework for CLI applications"
license-file = "LICENSE"
repository = "https://github.com/facebookincubator/scrut"
readme = "README.md"
categories = [
    "command-line-utilities",
    "development-tools::testing",
]
keywords = [
  "testing",
  "cli",
]

[features]

# volatile tests, that depend on timeouts or order in STDERR, STDOUT will
# be flaky and should not be executed in automation
volatile_tests = []

[lib]
name = "scrut"
path = "src/lib.rs"

[[bin]]
name = "scrut"
path = "src/bin/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.3", features = [
    "color",
    "default",
    "derive",
    "env",
    "error-context",
    "help",
    "std",
    "string",
    "suggestions",
    "unicode",
    "usage",
    "wrap_help",
] }
colored = "1.9"
derivative = "2.2"
derive_builder = "0.11"
dialoguer = "0.10"
dunce = "1.0"
globset = "0.4"
humantime = "2.1"
lazy_static = "1.4"
rand = "0.8"
regex = "1.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
shell-escape = "0.1"
strip-ansi-escapes = "0.1"
subprocess = "0.2.7"
tempfile = "3.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode_categories = "0.1"
which = "4.2.4"
wildmatch = "2.1"

[build-dependencies]
vergen = { version = "7", features = ["git"] }

[dev-dependencies]
assert_cmd = "2.0"
insta = {version = "1.21.1", features = ["json"] }
predicates = "2.1"
